# Noty

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  com.dagimg.noty.json  meson.build  meson_options.txt
.github/workflows/: release.yml
build-aux/flatpak/: com.dagimg.dev.noty.json  com.dagimg.noty.json
data/: com.dagimg.dev.noty.service.in  com.dagimg.noty.desktop.in  com.dagimg.noty.gschema.xml  com.dagimg.noty.metainfo.xml.in  com.dagimg.noty.service.in  meson.build
data/icons/: meson.build
data/style-schemes/: coldark-dark.xml  meson.build  noty-classic.xml  noty-dark.xml
po/: POTFILES.in  meson.build
src/: __init__.py  main.py  meson.build  noty.gresource.xml  noty.in  window.py
src/gtk/: help-overlay.blp
src/models/: note.py
src/services/: conf_manager.py  file_manager.py  style_scheme_manager.py
src/ui/: help-overlay.blp  note_list_item.blp  preferences.blp  rename_popover.blp  window.blp
src/utils/: constants.py  logger.py
src/view/: window.blp
src/widgets/: note_list_item.py  rename_popover.py
src/windows/: help_overlay.py  preferences.py  window.py
