application_id = get_option('application_id')

install_data(
  'noty-classic.xml',
  install_dir: get_option('datadir') / 'style-schemes'
)

install_data(
  'noty-dark.xml',
  install_dir: get_option('datadir') / 'style-schemes'
)

install_data(
  'coldark-dark.xml',
  install_dir: get_option('datadir') / 'style-schemes'
)

install_data(
  'nord.xml',
  install_dir: get_option('datadir') / 'style-schemes'
)

install_data(
  'tokyo-night.xml',
  install_dir: get_option('datadir') / 'style-schemes'
)